--- a/feedback-ng2/src/index.html
+++ b/feedback-ng2/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>FeedbackNg2</title>
+  <title>Project1</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
